--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <script src = 'https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js'></script>
         <script src = 'list.js'></script>
         <script src = 'mainCtrl.js'></script>
-        <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
+        <link rel="stylesheet" href="style.css" type= "text/css">
     </head>
     <body>
+        <h1>Shopping List</h1>
         <div ng-app="shoppingList" ng-controller="mainCtrl">
             <ul>
                 <li ng-repeat="x in products">
